revert date to i18n

--- a/src/services/i18n/fr/translation.json
+++ b/src/services/i18n/fr/translation.json
@@ -6,11 +6,11 @@
   },
   "HistoryList": {
     "title": "Historique des QR codes scannés",
-    "scanDate": "{{date, intlDateTime}}",
+    "scanDate": "Le {{date, intlDateTime}}",
     "empty": "Pas encore de QRCode scannés"
   },
   "NotificationList": {
-    "date": "{{date, intlDateTime}}",
+    "date": "Le {{date, intlDateTime}}",
     "empty": "Aucune notification"
   },
   "Scanner": {
